--- a/jakenpoo.html
+++ b/jakenpoo.html
@@ -25,3 +25,6 @@
     <button onclick="Resultado()" id="btnResultado">Mostrar</button>
 </body>
 </html>
+
+
+//para depurar (prova real) usar o firefox developer
